src/display/log_tabs/snapshots/dprs__display__log_tabs__tests__log_tabs_empty.snap
---
source: src/display/log_tabs/tests.rs
expression: terminal.backend().to_string()
---
"╭Containers────────────────────────────────────────────────────────────────────────────────────────╮"
"│                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
